# dotfiles

./: .gitignore  .gitmodules  README.md  espanso-debian-x11-amd64.deb  install  install.sh  install.sh.bak  o  order  part0  part1  part2  part3  part4  part5  part6  secrets  shared.sh  test.sh
neovim/: install.sh  leader.txt  pyproject.toml  requirements.txt
neovim/alternative_configs/: package-lock.json  package.json
neovim/alternative_configs/astronvim/: .styluaignore  .typos.toml  init.lua
neovim/alternative_configs/astronvim/lua/: lazy_snapshot.lua
neovim/alternative_configs/astronvim/lua/astronvim/: autocmds.lua  bootstrap.lua  health.lua  mappings.lua  options.lua
neovim/alternative_configs/astronvim/lua/plugins/: alpha.lua  cmp.lua  core.lua  heirline.lua  lsp.lua  neo-tree.lua  treesitter.lua  ui.lua
neovim/alternative_configs/astronvim/lua/user/: init.lua  mappings.lua  options.lua
neovim/alternative_configs/kickstart/: init.lua
neovim/alternative_configs/kickstart/lua/: lazy-plugins.lua  options.lua
neovim/alternative_configs/lazyvim/: lazy-lock.json  lazyvim.json
neovim/alternative_configs/lazyvim/lua/config/: clipboard.lua  keymaps.lua  options.lua
neovim/alternative_configs/lazyvim/lua/plugins/: better-escape.lua  blink.lua  core.lua  dashboard.lua  disable.lua  editor.lua  flash.lua  keymaps_lazyvim.lua  keymaps_lsp.lua  neo-tree.lua  neodev.lua  oil.lua  pickers.lua  python.lua  telescope.lua  ui.lua
neovim/alternative_configs/lazyvim/lua/util/: keymap_substituter.lua
neovim/configs/kickstart/: lazy-lock.json
neovim/configs/kickstart/lua/: keymaps.lua
neovim/configs/lazyvim/: lazy-lock.json
neovim/configs/lazyvim/lua/config/: keymaps.lua
neovim/configs/lazyvim/lua/plugins/: dashboard.lua  (+4 more)
neovim/neovim_env/: pyproject.toml
neovim/nvim/: init.lua  lazy-lock.json  lazyvim.json
neovim/nvim/lua/: keymaps.lua  lazy-plugins.lua  options.lua
neovim/nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
neovim/nvim/lua/plugins/: better-escape.lua  dashboard.lua  editor.lua  neo-tree.lua  oil.lua  python.lua
neovim/user/: mappings.lua  options.lua
neovim/user.symlink/: init.lua
neovim/user.symlink/.github/: README.md
neovim/user.symlink/plugins/: better-escape.lua  catpuccin.lua  gruvbox.lua  leap.lua  neodev.lua  neogen.lua  treesitter.lua
neovim/user/plugins/: better-escape.lua  coderunner.lua  dapui.lua  iron.lua  neo-tree.lua  neotest.lua  notebooknavigator.lua  telescope.lua  tokyonight.lua  user.lua  which-key.lua
(+318 files in other folders)
