# general

[tool.poetry]
name = "neovim_env"
version = "0.1.0"
description = "Python environment for neovim"
authors = ["Ruud Wijtvliet <rwijtvliet@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# dependencies

[tool.poetry.dependencies]
python = "^3.11"
cairosvg = "^2.7.1"
pnglatex = "^1.1"
plotly = "^5.22.0"
qtconsole = "^5.5.2"
pyqt5 = "^5.15.10"

